--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-bootstrap-base",
-  "version": "3.3.0",
+  "version": "3.3.0-time-reset",
   "description": "Native Angular Bootstrap Components",
   "private": true,
   "scripts": {
